<resources>
    <string name="app_name">FarmLinkApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--customer Strings-->
    <string name="TopImage">image!</string>
    <string name="EditProfileText">Edit Profile</string>
    <string name="Profile">Profile</string>
    <string name="FirstNametxt">First Name</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="ChangePassword">Forgot/Change Password</string>
    <string name="SaveBtn">SAVE</string>
    <string name="Logo">Logo</string>
    <string name="whiteSpace">whiteSpace</string>
    <string name="Title">WELCOME!!</string>
    <string name="Description">\"Farming is a profession of HOPE\"</string>
    <string name="GetStarted">Get Started</string>
    <string name="LoginWelcome">Hi,Please Login</string>
    <string name="Email1">Email</string>
    <string name="EnterPassword">Enter your password</string>
    <string name="Password">Password</string>
    <string name="PleaseLogin">Hi, Please Login</string>
    <string name="EnteryourEmail">Enter your Email</string>
    <string name="forgotPw">Don\'t Remember the Password? Recover Here.</string>
    <string name="TopImg" />
    <string name="Or">Or Login with</string>
    <string name="facebook" />
    <string name="Google">Google</string>
    <string name="Login">Login</string>
    <string name="Google1">Google</string>
    <string name="FacebookTxt">Facebook</string>
    <string name="CreateAccount">Create\nAccount</string>
    <string name="Name">Name</string>
    <string name="EnterName">Enter your Name</string>
    <string name="ReEnterPassword">Re-Enter Password</string>
    <string name="RepeatPassword">Repeat the Password</string>
    <string name="Signup">Signup</string>
    <string name="Settings">Settings</string>
    <string name="DeleteBtn">Delete</string>
    <string name="WelcomeTitle">Welcome To FARMINO</string>
    <string name="ContactNum">+94XXXXXXXX</string>
    <string name="EditProfileBtn">Edit Profile</string>
    <string name="Welcome_to">WELCOME To FARMLINK</string>
    <string name="contactNumber">Contact Number</string>
    <string name="Enterusername">Enter the username</string>
    <string name="userName">Username</string>
    <string name="UserName">Username</string>
    <string name="LetsGo">Let\'s Go</string>
    <string name="cusEmail">Email</string>
    <string name="userId">ID</string>
    <string name="MyProfile">My Profile</string>
    <string name="Feedback_Submission">Feedback Submission</string>
    <string name="Feedback_Descriiption">Please submit your reviews and complaints here, our team will reach you through email soon.</string>
    <string name="Submit_Feedback">Submit Feedback</string>
    <string name="past_feedbacks">🌟 My Feedbacks 🌟</string>
    <string name="deals">The Best Deals Today</string>
    <string name="Welcome">Welcome </string>
    <string name="btn_checkout">Checkout</string>
    <string name="editFullName">Full Name</string>
    <string name="editAddress1">Address Line 1</string>
    <string name="editAddress2">Address Line 2</string>
    <string name="editCity">City</string>
    <string name="editDistrict">District</string>
    <string name="editPhone">Phone</string>
    <string name="tvAddress">Addresses</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSave">Save</string>
    <string name="tvBilling">Billing</string>
    <string name="tvPayMethod">Payment Method</string>
    <string name="tvPayText">Only Cash On Delivery Available</string>
    <string name="tvShippingAddress">Shipping Address</string>
    <string name="tvAddressId">Address ID</string>
    <string name="tvFullName">Full Name</string>
    <string name="tvAddress1">Address Line 1</string>
    <string name="tvAddress2">Address Line 2</string>
    <string name="tvCity">City</string>
    <string name="tvDistrict">District</string>
    <string name="tvPhone">Phone Number</string>
    <string name="btnUpdate">Update</string>
    <string name="tvAddressDetails">Address Details</string>
    <string name="tvCart">My Cart</string>
    <string name="btnOrder">PLACE ORDER</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnHome">Go Home</string>
</resources>