<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".CustomerEditProfile">

    <Button
        android:id="@+id/cusProfileDeleteBtn"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_style"
        android:text="@string/DeleteBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cusProfileSaveBtn"
        app:layout_constraintTop_toBottomOf="@+id/cusProfileChangePassword"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/TopImage"
        android:layout_width="368dp"
        android:layout_height="196dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/TopImage"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cusProfileEditText"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/EditProfileText"
        android:textColor="#151212"
        android:textSize="@dimen/EditProfileTitle"
        app:layout_constraintBottom_toBottomOf="@+id/TopImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <ImageView
        android:id="@+id/cusProfileImg"
        android:layout_width="238dp"
        android:layout_height="177dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/Profile"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopImage"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cusProfileEmail"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cusProfileName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cusProfileUsername"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cusProfileEmail"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/cusProfileChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ChangePassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cusProfileUsername"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cusProfileSaveBtn"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_style"
        android:text="@string/SaveBtn"
        android:textSize="@dimen/SaveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cusProfileDeleteBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cusProfileDeleteBtn" />

    <EditText
        android:id="@+id/cusProfileName"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cusProfileImg"
        app:layout_constraintVertical_bias="0.042" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="TopImage,cusProfileEditText,cusProfileImg,cusProfileName,cusProfileEmail,cusProfileUsername,cusProfileChangePassword,cusProfileSaveBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>