<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85B000"
    tools:context=".Customer_activities.GetStarted">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="363dp"
        android:layout_height="419dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toTopOf="@+id/whiteSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo1" />

    <ImageView
        android:id="@+id/whiteSpace"
        android:layout_width="418dp"
        android:layout_height="343dp"
        android:contentDescription="@string/whiteSpace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottom_white" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="290dp"
        android:layout_height="129dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Welcome_to"
        android:textColor="#000000"
        android:textSize="@dimen/WelcomeTitle"
        app:layout_constraintBottom_toTopOf="@id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="162dp"
        android:layout_height="93dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/poppins_medium_italic"
        android:text="@string/Description"
        android:textColor="#000000"
        android:textSize="@dimen/WelcomeDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/GetStarted"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/bottom_button"
        android:text="@string/GetStarted"
        android:textSize="@dimen/GetStartedBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whiteSpace" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="Logo,whiteSpace,Title,Description,GetStarted" />
</androidx.constraintlayout.widget.ConstraintLayout>